--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -1,5 +1,5 @@
 .c-nav {
-  padding: 10px 0;
+  padding: 40px 0 10px 0;
 
   ul {
     display: flex;
@@ -13,10 +13,10 @@
 
       @media screen and (min-width: 768px) {
         margin: 0 30px 0 0;
-      }
 
-      &:last-child {
-        margin: 0;
+        &:last-child {
+          margin: 0;
+        }
       }
 
       button {
