--- a/src/styles/VideoCard.scss
+++ b/src/styles/VideoCard.scss
@@ -1,5 +1,6 @@
 .c-videoCard {
   color: #fff;
+  width: 100%;
   height: 400px;
   padding: 20px;
   transition: transform 300ms ease-out;
@@ -21,9 +22,14 @@
   }
 
   & img {
-    max-height: 200px;
+    margin-bottom: 20px;
     object-fit: contain;
     width: 100%;
+    
+    @media screen and (min-width: 768px) { 
+      margin-bottom: 0;
+      max-height: 200px;
+    }
   }
 
   &__title {
