--- a/src/styles/VideoCard.scss
+++ b/src/styles/VideoCard.scss
@@ -1,7 +1,7 @@
 .c-videoCard {
   color: #fff;
   width: 100%;
-  height: 400px;
+  height: 450px;
   padding: 20px;
   transition: transform 300ms ease-out;
 
@@ -29,8 +29,7 @@
     width: 100%;
     
     @media screen and (min-width: 768px) { 
-      margin-bottom: 0;
-      max-height: 200px;
+      max-height: 220px;
     }
   }
 
@@ -42,6 +41,14 @@
   &__copy {
     color: #fff;
     padding-top: 10px;
+  }
+
+  &__watch {
+    appearance: none;
+    background-color: #fff;
+    color: #0f495c;
+    border: none;
+    padding: 5px 20px;
   }
 
   &:hover {
