--- a/src/styles/VideoCard.scss
+++ b/src/styles/VideoCard.scss
@@ -47,6 +47,7 @@
     appearance: none;
     background-color: #fff;
     color: #0f495c;
+    cursor: pointer;
     border: none;
     padding: 5px 20px;
   }
